--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Digisolve - The Digital Agency For Winners</title>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;300;400;500;700&display=swap" rel="stylesheet">
+    <link  rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;300;400;500;700&display=swap">
     <link rel="stylesheet" type="text/css" href="vendors\css\fluid.css">
     <link rel="stylesheet" type="text/css" href="resources\css\style.css">
 
