--- a/index.html
+++ b/index.html
@@ -27,5 +27,22 @@
         </div>
     </header>
 
+    <section class="about-section">
+        <div class="row">
+            <div class="col span_1_of_2 about-box">
+                <h2 class="about-heading">A Digital Agency Focused On Growing Your Online Presence</h2>
+                <p class="about-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod, purus quis dignissim aliquam, risus eros tincidunt lacus, quis tempus lorem leo quis nisi.</p>
+                <p class="about-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod, purus quis dignissim aliquam, risus eros tincidunt lacus, quis tempus lorem leo quis nisi.</p>
+                <a href="#" class="btn btn-ghost">Read More</a>
+            </div>
+
+            <div class="col span_1_of_2 about-box">
+                <img src="resources/img/about-img.jpg" alt="Digisolve app on laptop" class="laptop-image">
+            </div>
+        </div>
+        
+        
+    </section>
+
 </body>
 </html>
