--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <div class="row">
             <div class="col span_1_of_2 about-box">
                 <h2 class="about-heading">A Digital Agency Focused On Growing Your Online Presence</h2>
-                <p class="about-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod, purus quis dignissim aliquam, risus eros tincidunt lacus, quis tempus lorem leo quis nisi.</p>
-                <p class="about-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod, purus quis dignissim aliquam, risus eros tincidunt lacus, quis tempus lorem leo quis nisi.</p>
+                <p class="about-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod, purus quis dignissim aliquam, risus eros tincidunt lacus, quis tempus lorem leo quis nisi.</p>
+                <p class="about-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod, purus quis dignissim aliquam, risus eros tincidunt lacus, quis tempus lorem leo quis nisi.</p>
                 <a href="#" class="btn btn-ghost">Read More</a>
             </div>
 
