--- a/index.html
+++ b/index.html
@@ -44,5 +44,35 @@
         
     </section>
 
+    <section class="work-section">
+        <div class="row">
+            <h2 class="section-heading">Our Work</h2>
+            <h3 class="section-sub-heading">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+        </div>
+
+        <div class="work-portfolio">
+            <figure class="portfolio-image">
+                <img src="resources/img/online-advertising.png" alt="Online Advertising image">
+                <p class="work-para">Online Advertising</p>
+            </figure>
+
+            <figure class="portfolio-image">
+                <img src="resources/img/social-media-campaigns.png" alt="Online Advertising image">
+                <p class="work-para">Social Media Campaign</p>
+            </figure>
+
+            <figure class="portfolio-image">
+                <img src="resources/img/ux-design.png" alt="Online Advertising image">
+                <p class="work-para">UX Design</p>
+            </figure>
+
+            <figure class="portfolio-image">
+                <img src="resources/img/branding-digital-marketing.png" alt="Online Advertising image">
+                <p class="work-para">Branding & Digital Marketing</p>
+            </figure>
+        </div>
+    </section>
+
+
 </body>
 </html>
