--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <title>Digisolve - The Digital Agency For Winners</title>
+    <script src="https://kit.fontawesome.com/2cefa26105.js" crossorigin="anonymous"></script>
+    
     <link  rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;300;400;500;700&display=swap">
     <link rel="stylesheet" type="text/css" href="vendors\css\fluid.css">
     <link rel="stylesheet" type="text/css" href="resources\css\style.css">
@@ -50,29 +52,49 @@
             <h3 class="section-sub-heading">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
         </div>
 
-        <div class="work-portfolio">
-            <figure class="portfolio-image">
-                <img src="resources/img/online-advertising.png" alt="Online Advertising image">
-                <p class="work-para">Online Advertising</p>
-            </figure>
+        <ul class="work-portfolio clearfix">
+            <li>
+                <figure class="portfolio-image">
+                    <img src="resources/img/online-advertising.png" alt="Online Advertising image">
+                    <p class="work-para">Online Advertising</p>
+                </figure>
+            </li>
 
-            <figure class="portfolio-image">
-                <img src="resources/img/social-media-campaigns.png" alt="Online Advertising image">
-                <p class="work-para">Social Media Campaign</p>
-            </figure>
+            <li>
+                <figure class="portfolio-image">
+                    <img src="resources/img/social-media-campaigns.png" alt="Social Media Campaign">
+                    <p class="work-para">Social Media Campaign</p>
+                </figure>
+            </li>
 
-            <figure class="portfolio-image">
-                <img src="resources/img/ux-design.png" alt="Online Advertising image">
-                <p class="work-para">UX Design</p>
-            </figure>
+            <li>
+                <figure class="portfolio-image">
+                    <img src="resources/img/ux-design.png" alt="UX Design">
+                    <p class="work-para">UX Design</p>
+                </figure>
+            </li>
 
-            <figure class="portfolio-image">
-                <img src="resources/img/branding-digital-marketing.png" alt="Online Advertising image">
-                <p class="work-para">Branding & Digital Marketing</p>
-            </figure>
-        </div>
+            <li>
+                <figure class="portfolio-image">
+                    <img src="resources/img/branding-digital-marketing.png" alt="Branding & Digital Marketing">
+                    <p class="work-para">Branding & Digital Marketing</p>
+                </figure>
+            </li>
+        </ul>
     </section>
 
+    <section class="services-section">
+        <div class="row">
+            <h2 class="section-heading">Our Services</h2>
+            <h3 class="section-sub-heading">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+        </div>   
+
+        <div class="row">
+            <div class="cols span_1_of_4">
+                <img
+            </div>
+        </div>
+    </section>
 
 </body>
 </html>
