--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Digisolve - The Digital Agency For Winners</title>
     <script src="https://kit.fontawesome.com/2cefa26105.js" crossorigin="anonymous"></script>
-    
+
     <link  rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;300;400;500;700&display=swap">
     <link rel="stylesheet" type="text/css" href="vendors\css\fluid.css">
     <link rel="stylesheet" type="text/css" href="resources\css\style.css">
@@ -90,8 +90,32 @@
         </div>   
 
         <div class="row">
-            <div class="cols span_1_of_4">
-                <img
+            <div class="cols span_1_of_4 service-box">
+                <i class="fas fa-tags big-icon"></i>
+                <h4 class="service-heading">Branding</h4>
+                <p class="service-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod, purus quis dignissim aliquam.</p>
+                <a class="service-link">Read More...</a>
+            </div>
+
+            <div class="cols span_1_of_4 service-box">
+                <i class="fas fa-pen-alt big-icon"></i>
+                <h4 class="service-heading">Content</h4>
+                <p class="service-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod, purus quis dignissim aliquam.</p>
+                <a class="service-link">Read More...</a>
+            </div>
+
+            <div class="cols span_1_of_4 service-box">
+                <i class="fas fa-funnel-dollar big-icon"></i>
+                <h4 class="service-heading">Marketing</h4>
+                <p class="service-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod, purus quis dignissim aliquam.</p>
+                <a class="service-link">Read More...</a>
+            </div>
+
+            <div class="cols span_1_of_4 service-box">
+                <i class="fas fa-code big-icon"></i>
+                <h4 class="service-heading">Web Design</h4>
+                <p class="service-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod, purus quis dignissim aliquam.</p>
+                <a class="service-link">Read More...</a>
             </div>
         </div>
     </section>
