--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul class="main-nav">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Contact</a></li>
-                <li><a href="#">About us</a></li>
+                <li><a href="#about-section">About us</a></li>
             </ul>
         </nav>
         <div class="header-box">
@@ -29,7 +29,7 @@
         </div>
     </header>
 
-    <section class="about-section">
+    <section class="about-section" id="about-section">
         <div class="row">
             <div class="col span_1_of_2 about-box">
                 <h2 class="about-heading">A Digital Agency Focused On Growing Your Online Presence</h2>
@@ -119,6 +119,79 @@
             </div>
         </div>
     </section>
+
+    <section class="partners-section">
+        <div class="row">
+            <h2 class="section-heading">Featured clients</h2>
+            <h3 class="section-sub-heading">We've worked with some of the best companies in the world. Here are some of our Amazing Partners</h3>
+        </div>
+
+        <div class="row">
+            <div class="col span_1_of_4">
+                <img class="partner-logo" src="resources/img/brand-logo-1.png" alt="Brand Logo">
+            </div>
+
+            <div class="col span_1_of_4">
+                <img class="partner-logo" src="resources/img/brand-logo-2.png" alt="Brand Logo">
+            </div>
+
+            <div class="col span_1_of_4">
+                <img class="partner-logo" src="resources/img/brand-logo-3.png" alt="Brand Logo">
+            </div>
+
+            <div class="col span_1_of_4">
+                <img class="partner-logo" src="resources/img/brand-logo-4.png" alt="Brand Logo">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col span_1_of_4">
+                <img class="partner-logo" src="resources/img/brand-logo-5.png" alt="Brand Logo">
+            </div>
+
+            <div class="col span_1_of_4">
+                <img class="partner-logo" src="resources/img/brand-logo-6.png" alt="Brand Logo">
+            </div>
+
+            <div class="col span_1_of_4">
+                <img class="partner-logo" src="resources/img/brand-logo-7.png" alt="Brand Logo">
+            </div>
+
+            <div class="col span_1_of_4">
+                <img class="partner-logo" src="resources/img/brand-logo-8.png" alt="Brand Logo">
+            </div>
+        </div>
+    </section>
+
+    <section class="testimonial-section">
+        <div class="row">
+            <h2 class="testimonial-heading">Our Testimonials</h2>
+        </div>
+
+        <div class="row">
+            <div class="col span_1_of_3 testimonial-box"> 
+                <blockquote>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod, purus quis dignissim aliquam, risus eros tincidunt lacus, quis tempus lorem leo quis nisi.
+                </blockquote>
+                <cite><img src="resources/img/client-1.jpg" alt="Arron Cruz"> Arron Cruz </cite>
+            </div>
+
+            <div class="col span_1_of_3 testimonial-box"> 
+                <blockquote>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod, purus quis dignissim aliquam, risus eros tincidunt lacus, quis tempus lorem leo quis nisi.
+                </blockquote>
+                <cite><img src="resources/img/client-2.jpg" alt="Jeff Jones"> Jeff Jones</cite>
+            </div>
+
+            <div class="col span_1_of_3 testimonial-box"> 
+                <blockquote>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod, purus quis dignissim aliquam, risus eros tincidunt lacus, quis tempus lorem leo quis nisi.
+                </blockquote>
+                <cite><img src="resources/img/client-3.jpg" alt="Elenise da conceicao"> Elenise da conceicao</cite>
+            </div>
+        </div>
+    </section>
+
 
 </body>
 </html>
