--- a/index.html
+++ b/index.html
@@ -317,11 +317,46 @@
                         <textarea name="message" id="message" placeholder="Your message"></textarea>
                     </div>
                 </div>
-            </form>
 
+                <div class="row">
+                    <div class="col span_1_of_3">
+                        &nbsp;
+                    </div>
+
+                    <div class="col span_2_of_3">
+                        <input type="submit" value="Send it!">
+                    </div>
+                </div>
+            </form>
+        </div>
+    </section>
+
+    <footer>
+        <div class="row">
+            <div class="col span_1_of_2">
+                <ul class="footer-nav">
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Help & Support</a></li>
+                    <li><a href="#">iOS App</a></li>
+                    <li><a href="#">Android App</a></li>
+                </ul>
+            </div>
+
+            <div class="col span_1_of_2">
+                <ul class="social-links">
+                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                </ul>
+            </div>
         </div>
 
-    </section>
+        <div class="row">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod, purus quis dignissim aliquam,<br> risus eros tincidunt lacus, quis tempus lorem leo quis nisi.</p>
+        </div>
+    </footer>
 
 </body>
 </html>
