--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <title>Digisolve - The Digital Agency For Winners</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/2cefa26105.js" crossorigin="anonymous"></script>
 
     <link  rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;300;400;500;700&display=swap">
     <link rel="stylesheet" type="text/css" href="vendors\css\fluid.css">
     <link rel="stylesheet" type="text/css" href="resources\css\style.css">
+    <link rel="stylesheet" type="text/css" href="resources\css\media-query.css">
 
 </head>
 <body>
@@ -279,7 +281,7 @@
         <div class="row">
             <form method="post" action="#" class="contact-form">
                 <div class="row">
-                    <div class="col span_1_of_3">
+                    <div class="col span_1_of_3 contact-label">
                         <label for="name">Name</label>
                     </div>
 
@@ -289,7 +291,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col span_1_of_3">
+                    <div class="col span_1_of_3 contact-label">
                         <label for="email">Email</label>
                     </div>
 
@@ -299,7 +301,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col span_1_of_3">
+                    <div class="col span_1_of_3 contact-label">
                         <label class="newsletter" for="newsletter">Newsletter?</label>
                     </div>
 
@@ -309,7 +311,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col span_1_of_3">
+                    <div class="col span_1_of_3 contact-label">
                         <label for="message">Drop us a line</label>
                     </div>
 
@@ -359,4 +361,8 @@
     </footer>
 
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
+
 </html>
