--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
 
     <link  rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;300;400;500;700&display=swap">
     <link rel="stylesheet" type="text/css" href="vendors\css\fluid.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" type="text/css" href="resources\css\style.css">
     <link rel="stylesheet" type="text/css" href="resources\css\media-query.css">
 
 </head>
 <body>
     <header>
-        <nav class="sticky-nav">
+        <nav>
             <img src="resources/img/digisolve-logo.png" alt="Digisolve Logo" class="logo">
             <ul class="main-nav">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#contact-section">Contact</a></li>
                 <li><a href="#about-section">About us</a></li>
             </ul>
         </nav>
@@ -273,7 +274,7 @@
         </div>
     </section>
 
-    <section class="contact-section">
+    <section class="contact-section" id="contact-section">
         <div class="row">
             <h2 class="contact-heading">We're happy to hear from you</h2>
         </div>
@@ -364,7 +365,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="resources/js/script.js"></script>
 </body>
 </html>
