--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
         </div>
     </header>
 
-    <section class="about-section" id="about-section">
+    <section class="about-section js--about-section" id="about-section">
         <div class="row">
-            <div class="col span_1_of_2 about-box">
+            <div class="col span_1_of_2 about-box js--about-box">
                 <h2 class="about-heading">A Digital Agency Focused On Growing Your Online Presence</h2>
                 <p class="about-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod, purus quis dignissim aliquam, risus eros tincidunt lacus, quis tempus lorem leo quis nisi.</p>
                 <p class="about-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod, purus quis dignissim aliquam, risus eros tincidunt lacus, quis tempus lorem leo quis nisi.</p>
                 <a href="#" class="btn btn-ghost">Read More</a>
             </div>
 
-            <div class="col span_1_of_2 about-box">
+            <div class="col span_1_of_2 about-box js--about-box">
                 <img src="resources/img/about-img.jpg" alt="Digisolve app on laptop" class="laptop-image">
             </div>
         </div>
@@ -86,35 +86,35 @@
         </ul>
     </section>
 
-    <section class="services-section">
+    <section class="services-section js--services-section">
         <div class="row">
             <h2 class="section-heading">Our Services</h2>
             <h3 class="section-sub-heading">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
         </div>   
 
         <div class="row">
-            <div class="cols span_1_of_4 service-box">
+            <div class="cols span_1_of_4 service-box js--service-box">
                 <i class="fas fa-tags big-icon"></i>
                 <h4 class="service-heading">Branding</h4>
                 <p class="service-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod, purus quis dignissim aliquam.</p>
                 <a class="service-link">Read More...</a>
             </div>
 
-            <div class="cols span_1_of_4 service-box">
+            <div class="cols span_1_of_4 service-box js--service-box">
                 <i class="fas fa-pen-alt big-icon"></i>
                 <h4 class="service-heading">Content</h4>
                 <p class="service-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod, purus quis dignissim aliquam.</p>
                 <a class="service-link">Read More...</a>
             </div>
 
-            <div class="cols span_1_of_4 service-box">
+            <div class="cols span_1_of_4 service-box js--service-box">
                 <i class="fas fa-funnel-dollar big-icon"></i>
                 <h4 class="service-heading">Marketing</h4>
                 <p class="service-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod, purus quis dignissim aliquam.</p>
                 <a class="service-link">Read More...</a>
             </div>
 
-            <div class="cols span_1_of_4 service-box">
+            <div class="cols span_1_of_4 service-box js--service-box">
                 <i class="fas fa-code big-icon"></i>
                 <h4 class="service-heading">Web Design</h4>
                 <p class="service-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam euismod, purus quis dignissim aliquam.</p>
@@ -195,7 +195,7 @@
         </div>
     </section>
 
-    <section class="packages-section">
+    <section class="packages-section js--packages-section">
         <div class="row">
             <h2 class="packages-heading">Check out Our Most Popular Packages</h2>
         </div>
@@ -249,7 +249,7 @@
             </div>
 
             <div class="col span_1_of_3">
-                <div class="package-box">
+                <div class="package-box js--enterprise">
                     <div>
                         <h4 class="package-heading">Enterprise</h4>
                         <p class="package-price">$4,999 <span>6 months</span></p>
