--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
 </head>
 <body>
-    <header>
+    <header id="home">
         <nav>
             <img src="resources/img/digisolve-logo.png" alt="Digisolve Logo" class="logo">
             <ul class="main-nav">
-                <li><a href="#">Home</a></li>
-                <li><a href="#contact-section">Contact</a></li>
-                <li><a href="#about-section">About us</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#about">About us</a></li>
             </ul>
         </nav>
         <div class="header-box">
@@ -28,11 +28,11 @@
                 <h1>Digital Agency</h1>
                 <h2>The one stop for all your digital solutions</h2>
             </div>
-            <a href="#" class="btn btn-full">Get a Quote Today!</a>
+            <a href="#" class="btn btn-full js--scroll-to-contact">Get a Quote Today!</a>
         </div>
     </header>
 
-    <section class="about-section js--about-section" id="about-section">
+    <section class="about-section js--about-section" id="about">
         <div class="row">
             <div class="col span_1_of_2 about-box js--about-box">
                 <h2 class="about-heading">A Digital Agency Focused On Growing Your Online Presence</h2>
@@ -274,7 +274,7 @@
         </div>
     </section>
 
-    <section class="contact-section" id="contact-section">
+    <section class="contact-section js--contact" id="contact">
         <div class="row">
             <h2 class="contact-heading">We're happy to hear from you</h2>
         </div>
