--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <title>Digisolve - The Digital Agency For Winners</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/2cefa26105.js" crossorigin="anonymous"></script>
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="vendors/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="vendors/favicon//favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="vendors/favicon//favicon-16x16.png">
+    <link rel="manifest" href="vendors/favicon/site.webmanifest">  
 
     <link  rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;300;400;500;700&display=swap">
     <link rel="stylesheet" type="text/css" href="vendors\css\fluid.css">
